--- a/app/index.html
+++ b/app/index.html
@@ -1,62 +1,33 @@
 <!doctype html>
 <html>
-	<head>
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-        <!-- build:css styles/main.css -->
-		<link rel="stylesheet" href="styles/main.css">
-	</head>
-	<body>
-        <aside id="aside">
-            <section id="weatherAlertContainer">
-                <h1>Création liste clients</h1>
-                <script id="example-template" type="text/x-handlebars-template">
-                    <ul>
-                        {{#each people}}
-                        <li>
-                            <p>ID Client : {{id}}</p>
-                            <ul>
-                            {{#each properties}}
-                                <li>
-                                    <p>Prénom : {{firstName}}</p>
-                                    <p>Nom : {{lastName}}</p>
-                                    <p>Sexe : {{sexe}}</p>
-                                    <p>Age : {{age}}</p>
-                                </li>
-                            {{/each}}
-                            </ul>
-                        </li>
-                        {{/each}}
-                    </ul>
-                </script>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
+    <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
 
-                <script id="built-in-helpers-template" type="text/x-handlebars-template">
-                    {{#each animals}}
-                        <p>
-                            The {{capitalize this.name}} says {{#if this.noise}} "{{this.noise}}".
-                                                              {{else}}
-                                                                -> nothing since its a {{this.name}}.
-                                                              {{/if}}
-                        </p>
-                    {{/each}}
-                </script>
+<aside id="aside">
+    <section id="">
 
-                <div class="content-placeholder"></div>
 
-            </section>
-        </aside>
-        <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
-        <script src="../bower_components/matchMedia/matchMedia.js"></script>
-        <!-- endbower -->
-        <!-- endbuild -->
+        @@include('static-files/templates/page.html')
 
-        <!-- build:js app.js -->
-        <script src="app.js"></script>
-        <!-- endbuild -->
+    </section>
+</aside>
+<!-- build:js scripts/vendor.js -->
+<!-- bower:js -->
+<script src="../bower_components/matchMedia/matchMedia.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 
-    </body>
+<!-- build:js app.js -->
+<script src="app.js"></script>
+<!-- endbuild -->
+
+</body>
 </html>
