--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -13,10 +13,11 @@
         <section id="">
 
 
-            <h1>IN PAGE HTML</h1>
+            <h1>IN PAGE HTML</h1>aaaaaaaaaaaa
+bbbbbbbbbb
             <section class="element">
     <h1>IN ELEMENT</h1>
-</section>
+</section>zzzzzzzzzeeeeeeeeeeefffffffff
 
         </section>
         <aside id="aside">
@@ -24,14 +25,13 @@
         </aside>
         <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
-<script src="../bower_components/matchMedia/matchMedia.js"></script>
+    <script src="../bower_components/matchMedia/matchMedia.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
 <!-- build:js app.js -->
-<script src="app.js"></script>
+    <script src="app.js"></script>
 <!-- endbuild -->
 
     </body>
-</html>body>
 </html>
