add plugin creatList

--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-<section id="">
+<section class="element">
+    <h1>IN ELEMENT </h1>
+
+    <ul class="blockList"></ul>
 
 
-    @@include('static-files/templates/page.html')
-    @@include('static-files/templates/components/element.html')
 
 </section>
 <aside id="aside">
