start project DIAMS

--- a/app/index.html
+++ b/app/index.html
@@ -10,17 +10,38 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-<section class="element">
-    <h1>IN ELEMENT </h1>
+    <header class="heading">
+        <h1 class="h1">Développement, Intégration & Hébergement</h1>
+    </header>
+    <aside id="">
+        <nav>
+            <ul>
+                <li>Développement, Intégration</li>
+                <li>Hébergement</li>
+                <li>Choix du nom de domaine</li>
+                <li>Expérience utilisateur (UX)</li>
+                <li>Design</li>
+                <li>SEO</li>
+                <li>Contenu éditorial</li>
+                <li>Webanalytics</li>
+                <li>Juridique</li>
+                <li>Achats</li>
+                <li>Sécurité & CNIL</li>
+            </ul>
+        </nav>
+    </aside>
+    <section class="element">
+        <h2>Développement, Intégration</h2>
 
-    <ul class="blockList"></ul>
+
+        <ul class="blockList"></ul>
 
 
 
-</section>
-<aside id="aside">
+    </section>
+    <aside id="">
 
-</aside>
+    </aside>
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 <script src="../bower_components/matchMedia/matchMedia.js"></script>
