integration DOM & CSS

--- a/app/index.html
+++ b/app/index.html
@@ -10,38 +10,40 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header class="heading">
-        <h1 class="h1">Développement, Intégration & Hébergement</h1>
+    <header class="diamsHeading">
+        <h1 class="diamsH1">Développement, Intégration & Hébergement</h1>
     </header>
-    <aside id="">
-        <nav>
-            <ul>
-                <li>Développement, Intégration</li>
-                <li>Hébergement</li>
-                <li>Choix du nom de domaine</li>
-                <li>Expérience utilisateur (UX)</li>
-                <li>Design</li>
-                <li>SEO</li>
-                <li>Contenu éditorial</li>
-                <li>Webanalytics</li>
-                <li>Juridique</li>
-                <li>Achats</li>
-                <li>Sécurité & CNIL</li>
-            </ul>
-        </nav>
-    </aside>
-    <section class="element">
-        <h2>Développement, Intégration</h2>
-
-
-        <ul class="blockList"></ul>
-
-
-
+    <section id="diamsMain" class="diamsContainer">
+        <div class="diamsFrameContainer">
+            <aside class="diamsNavContainer">
+                <nav class="diamsNavigation">
+                    <ul>
+                        <li><a href="">Développement, Intégration</a></li>
+                        <li><a href="">Hébergement</a></li>
+                        <li><a href="">Choix du nom de domaine</a></li>
+                        <li><a href="">Expérience utilisateur (UX)</a></li>
+                        <li><a href="">Design</a></li>
+                        <li><a href="">SEO</a></li>
+                        <li><a href="">Contenu éditorial</a></li>
+                        <li><a href="">Webanalytics</a></li>
+                        <li><a href="">Juridique</a></li>
+                        <li><a href="">Achats</a></li>
+                        <li><a href="">Sécurité & CNIL</a></li>
+                    </ul>
+                </nav>
+            </aside>
+            <section class="diamsMainContent">
+                <article class="diamsContent">
+                    <h2>Développement, Intégration</h2>
+                    <ul class="blockList"></ul>
+                </article>
+                <aside class="diamsColumnContent">
+                    <h2>Contacts</h2>
+                    <ul class="blockList"></ul>
+                </aside>
+            </section>
+        </div>
     </section>
-    <aside id="">
-
-    </aside>
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 <script src="../bower_components/matchMedia/matchMedia.js"></script>
