--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <header class="diamsHeading">
         <h1 class="diamsH1">Développement, Intégration & Hébergement</h1>
     </header>
-    <main id="diamsMain" class="diamsContainer">
+    <main id="diamsMain" class="diamsMainContainer">
         <div class="diamsFrameContainer">
             <aside class="diamsNavContainer">
                 <nav class="diamsNavigation">
@@ -39,8 +39,8 @@
                 </nav>
             </aside>
             <section class="diamsMainContent">
-                <div id="dev_int" class="box">
-                    <!-- DEVELOPPEMENT INTEGRATION -->
+                <!-- DEVELOPPEMENT INTEGRATION -->
+                <div id="dev_int" class="diamsBox">
                     <div class="diamsMainColumn">
                         <h2>Développement, Intégration</h2>
                         <article class="diamsContent">
@@ -81,7 +81,7 @@
 
                         </article>
                     </div>
-                    <aside class="diamsAsideColumn">
+                    <aside class="diamsSideBar">
                         <h2>Contacts</h2>
                         <ul class="contactList">
                             <strong>Stéphane DELAVAL (Sécurité)</strong>
@@ -137,7 +137,7 @@
 
                         </article>
                     </div>
-                    <aside class="diamsAsideColumn">
+                    <aside class="diamsSideBar">
                         <h2>Contacts</h2>
                         <ul class="contactList">
                             <strong>Stéphane DELAVAL (Sécurité)</strong>
@@ -154,7 +154,7 @@
                     </aside>
                 </div>
                 <!-- CHOIX NOM DE DOMAINE -->
-                <div id="choix_nom_domaine" class="box">
+                <div id="choix_nom_domaine" class="diamsBox">
                     <div class="diamsMainColumn">
                         <h2>Choix du nom de domaine</h2>
                         <article class="diamsContent">
@@ -194,7 +194,7 @@
                             </ul>
                         </article>
                     </div>
-                    <aside class="diamsAsideColumn">
+                    <aside class="diamsSideBar">
                         <h2>Contacts</h2>
                         <ul class="contactList">
                             <strong>Stéphane DELAVAL (Sécurité)</strong>
